--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --turbopack",
     "start": "next start"
   },
   "dependencies": {
@@ -47,7 +47,7 @@
     "cmdk": "1.1.1",
     "date-fns": "4.1.0",
     "framer-motion": "12.23.12",
-    "next": "15.4.6",
+    "next": "15.5.0",
     "next-themes": "0.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
@@ -64,8 +64,13 @@
     "zod": "4.0.17"
   },
   "devDependencies": {
-    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react": "19.1.10",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.6.14"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.10"
+    }
   }
 }
