--- a/package.json
+++ b/package.json
@@ -35,20 +35,20 @@
     "@radix-ui/react-toggle-group": "1.1.11",
     "@radix-ui/react-tooltip": "1.2.8",
     "@remixicon/react": "4.6.0",
-    "@sentry/nextjs": "10.6.0",
+    "@sentry/nextjs": "10.7.0",
     "@supabase/ssr": "0.7.0",
     "@tailwindcss/postcss": "4.1.12",
     "@tanstack/react-query": "5.85.5",
     "@tanstack/react-table": "8.21.3",
     "@vercel/analytics": "1.5.0",
-    "ai": "5.0.25",
+    "ai": "5.0.26",
     "canvas-confetti": "1.9.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
     "date-fns": "4.1.0",
     "framer-motion": "12.23.12",
-    "motion": "^12.23.12",
+    "motion": "12.23.12",
     "next": "15.5.2",
     "next-themes": "0.4.6",
     "react": "19.1.1",
@@ -62,10 +62,10 @@
     "tailwindcss": "4.1.12",
     "tw-animate-css": "1.3.7",
     "typescript": "5.9.2",
-    "zod": "4.1.3"
+    "zod": "4.1.4"
   },
   "devDependencies": {
-    "@types/react": "19.1.11",
+    "@types/react": "19.1.12",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.6.14"
   },
