--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "cmdk": "1.1.1",
     "date-fns": "4.1.0",
     "framer-motion": "12.23.14",
-    "motion": "12.23.14",
+    "motion": "12.23.16",
     "next": "15.5.3",
     "next-themes": "0.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "react-hook-form": "7.62.0",
+    "react-hook-form": "7.63.0",
     "react-number-format": "5.4.4",
     "recharts": "3.2.1",
     "require-in-the-middle": "7.5.2",
@@ -58,9 +58,9 @@
   },
   "devDependencies": {
     "@types/react": "19.1.13",
-    "ts-prune": "0.10.3",
     "prettier": "3.6.2",
-    "prettier-plugin-tailwindcss": "0.6.14"
+    "prettier-plugin-tailwindcss": "0.6.14",
+    "ts-prune": "0.10.3"
   },
   "pnpm": {
     "overrides": {
