--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "check:unused": "ts-prune | rg -v '^(app/|middleware\\.ts|instrumentation|instrumentation-client|\\.next/)' || true"
   },
   "dependencies": {
-    "@ai-sdk/openai": "2.0.32",
+    "@ai-sdk/openai": "2.0.35",
     "@hookform/resolvers": "5.2.2",
     "@radix-ui/react-alert-dialog": "1.1.15",
     "@radix-ui/react-avatar": "1.1.10",
     "@radix-ui/react-checkbox": "1.3.3",
     "@radix-ui/react-dialog": "1.1.15",
     "@radix-ui/react-dropdown-menu": "2.1.16",
-    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-hover-card": "1.1.15",
     "@radix-ui/react-label": "2.1.7",
     "@radix-ui/react-popover": "1.1.15",
     "@radix-ui/react-progress": "1.1.7",
@@ -28,21 +28,21 @@
     "@radix-ui/react-toggle": "1.1.10",
     "@radix-ui/react-tooltip": "1.2.8",
     "@remixicon/react": "4.6.0",
-    "@sentry/nextjs": "10.13.0",
+    "@sentry/nextjs": "10.15.0",
     "@supabase/ssr": "0.7.0",
     "@tailwindcss/postcss": "4.1.13",
     "@tanstack/react-query": "5.90.1",
     "@tanstack/react-table": "8.21.3",
     "@vercel/analytics": "1.5.0",
-    "ai": "5.0.48",
+    "ai": "5.0.53",
     "canvas-confetti": "1.9.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
     "date-fns": "4.1.0",
-    "framer-motion": "12.23.18",
-    "motion": "12.23.18",
-    "next": "15.5.3",
+    "framer-motion": "12.23.22",
+    "motion": "12.23.22",
+    "next": "15.5.4",
     "next-themes": "0.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
@@ -53,7 +53,7 @@
     "sonner": "2.0.7",
     "tailwind-merge": "3.3.1",
     "tailwindcss": "4.1.13",
-    "tw-animate-css": "1.3.8",
+    "tw-animate-css": "1.4.0",
     "typescript": "5.9.2",
     "zod": "4.1.11"
   },
