--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "next build --turbopack",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "check:unused": "ts-prune | rg -v '^(app/|middleware\\.ts|instrumentation|instrumentation-client|\\.next/)' || true"
+    "knip": "knip"
   },
   "dependencies": {
     "@ai-sdk/openai": "2.0.35",
@@ -29,7 +29,7 @@
     "@radix-ui/react-tooltip": "1.2.8",
     "@remixicon/react": "4.6.0",
     "@supabase/ssr": "0.7.0",
-    "@tailwindcss/postcss": "4.1.13",
+    "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/react-query": "5.90.1",
     "@tanstack/react-table": "8.21.3",
     "@vercel/analytics": "1.5.0",
@@ -48,19 +48,18 @@
     "react-hook-form": "7.63.0",
     "react-number-format": "5.4.4",
     "recharts": "3.2.1",
-    "require-in-the-middle": "7.5.2",
     "sonner": "2.0.7",
     "tailwind-merge": "3.3.1",
     "tailwindcss": "4.1.13",
-    "tw-animate-css": "1.4.0",
-    "typescript": "5.9.2",
     "zod": "4.1.11"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
     "@types/react": "19.1.13",
+    "knip": "^5.64.1",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.6.14",
-    "ts-prune": "0.10.3"
+    "typescript": "5.9.2"
   },
   "pnpm": {
     "overrides": {
