--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "knip": "knip"
   },
   "dependencies": {
-    "@ai-sdk/openai": "2.0.35",
+    "@ai-sdk/openai": "2.0.37",
     "@hookform/resolvers": "5.2.2",
     "@radix-ui/react-alert-dialog": "1.1.15",
     "@radix-ui/react-avatar": "1.1.10",
@@ -29,11 +29,11 @@
     "@radix-ui/react-tooltip": "1.2.8",
     "@remixicon/react": "4.6.0",
     "@supabase/ssr": "0.7.0",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@tanstack/react-query": "5.90.1",
+    "@tailwindcss/postcss": "4.1.13",
+    "@tanstack/react-query": "5.90.2",
     "@tanstack/react-table": "8.21.3",
     "@vercel/analytics": "1.5.0",
-    "ai": "5.0.53",
+    "ai": "5.0.55",
     "canvas-confetti": "1.9.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
@@ -54,9 +54,9 @@
     "zod": "4.1.11"
   },
   "devDependencies": {
-    "@types/node": "^24.5.2",
+    "@types/node": "24.5.2",
     "@types/react": "19.1.13",
-    "knip": "^5.64.1",
+    "knip": "5.64.1",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.6.14",
     "typescript": "5.9.2"
