--- a/components.json
+++ b/components.json
@@ -10,11 +10,12 @@
     "cssVariables": true,
     "prefix": ""
   },
+  "iconLibrary": "lucide",
   "aliases": {
     "components": "@/components",
-    "app": "@/components/app",
-    "actions": "@/components/actions",
-    "public": "@/public",
     "utils": "@/lib/utils"
+  },
+  "registries": {
+    "@magicui": "https://magicui.design/r/{name}.json"
   }
 }
